developers can open dev tools by pressing f12 now, scrollbar,toolbar and webcontent was fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,11 @@
+ 
+ 
 .titleBar {
     width: 100%;
     height: 3vh;
     background-color: #3591e700;
+    top: 0px;
+    position: fixed;
   }
   
   #dragArea {
@@ -57,3 +61,5 @@
      background: linear-gradient(to top, #ece80b, #dad728);
   
   }
+
+
